# stat_functions

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: beta.rs  error.rs  lib.rs  pnorm.rs  students_t.rs
