[package]
name = "stat_functions"
version = "0.2.0"
edition = "2021"
authors = ["Simon Heath <simon.heath@gmail.com>"]
description = "A collections of useful statistics functions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "~0.2"
thiserror = "~1.0"